intern/cycles/util/util_system.cpp
@@ -40,7 +40,7 @@ bool system_cpu_ensure_initialized()
 {
 	static bool is_initialized = false;
 	static bool result = false;
-	if (is_initialized) {
+	if(is_initialized) {
 		return result;
 	}
 	is_initialized = true;
@@ -71,8 +71,8 @@ int system_cpu_thread_count()
 {
 	const int num_nodes = system_cpu_num_numa_nodes();
 	int num_threads = 0;
-	for (int node = 0; node < num_nodes; ++node) {
-		if (!system_cpu_is_numa_node_available(node)) {
+	for(int node = 0; node < num_nodes; ++node) {
+		if(!system_cpu_is_numa_node_available(node)) {
 			continue;
 		}
 		num_threads += system_cpu_num_numa_node_processors(node);
@@ -82,7 +82,7 @@ int system_cpu_thread_count()
 
 int system_cpu_num_numa_nodes()
 {
-	if (!system_cpu_ensure_initialized()) {
+	if(!system_cpu_ensure_initialized()) {
 		/* Fallback to a single node with all the threads. */
 		return 1;
 	}
@@ -91,7 +91,7 @@ int system_cpu_num_numa_nodes()
 
 bool system_cpu_is_numa_node_available(int node)
 {
-	if (!system_cpu_ensure_initialized()) {
+	if(!system_cpu_ensure_initialized()) {
 		return true;
 	}
 	return numaAPI_IsNodeAvailable(node);
@@ -99,7 +99,7 @@ bool system_cpu_is_numa_node_available(int node)
 
 int system_cpu_num_numa_node_processors(int node)
 {
-	if (!system_cpu_ensure_initialized()) {
+	if(!system_cpu_ensure_initialized()) {
 		return system_cpu_thread_count_fallback();
 	}
 	return numaAPI_GetNumNodeProcessors(node);
@@ -107,10 +107,18 @@ int system_cpu_num_numa_node_processors(int node)
 
 bool system_cpu_run_thread_on_node(int node)
 {
-	if (!system_cpu_ensure_initialized()) {
+	if(!system_cpu_ensure_initialized()) {
 		return true;
 	}
 	return numaAPI_RunThreadOnNode(node);
+}
+
+int system_cpu_num_active_group_processors()
+{
+	if(!system_cpu_ensure_initialized()) {
+		return system_cpu_thread_count_fallback();
+	}
+	return numaAPI_GetNumCurrentNodesProcessors();
 }
 
 #if !defined(_WIN32) || defined(FREE_WINDOWS)
